dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([hasciicam.c])

AC_CANONICAL_HOST
AC_PROG_MAKE_SET
AC_PROG_INSTALL

dnl Setup for automake
AM_SANITY_CHECK
AM_INIT_AUTOMAKE(HasciiCam, 0.9)
AM_CONFIG_HEADER(config.h)

dnl Get the operating system and version number...
uname=`uname`
uversion=`uname -r | sed -e 's/-.*$//g;s/[\.]//g'`

dnl Check for tools
AC_PROG_CC
AC_PROG_RANLIB

dnl Add the local include path and some flags
CFLAGS="$CFLAGS -O3 -I/usr/local/include -ffast-math"

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(linux/videodev.h jpeglib.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions
dnl AC_FUNC_MMAP

AC_CHECK_LIB(aa,aa_init, have_aa=yes, [
	echo
	echo "!!!!!!! AALIB IS NOT FOUND ON THIS SYSTEM !!!!!!!"
	echo "AALib is needed in order to compile hasciicam"
	echo "no panic, that's a easy task. Just download the"
	echo "libsfrom http://ascii.dyne.org and install them."
	echo "If you did so and still get this error message,"
	echo "make sure thatlibaa.so is present in your library"
	echo "path - /etc/ld.so.conf - and that you succesfully"
	echo "runned ldconfig after installation."
	echo
	exit 0;
])

if test "$uname" = "IRIX"; then
 AC_DEFINE(HAVE_SGI)
 SGI_SOURCES="resample.c"
else
 AC_DEFINE(HAVE_LINUX)
 SGI_SOURCES=""
fi

AC_SUBST(SGI_SOURCES)

CFLAGS="$CFLAGS"
LIBS="$LIBS -laa -ljpeg"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
