dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_CONFIG_SRCDIR([hasciicam.c])

AC_CANONICAL_HOST
AC_PROG_MAKE_SET
AC_PROG_INSTALL

dnl Setup for automake
AM_SANITY_CHECK
AM_INIT_AUTOMAKE(HasciiCam, 1.0) 
AM_CONFIG_HEADER(config.h)

dnl Get the operating system and version number...
uname=`uname`
uversion=`uname -r | sed -e 's/-.*$//g;s/[\.]//g'`

dnl Check for tools
AC_PROG_CC
AC_PROG_RANLIB

dnl Add the local include path and some flags
CFLAGS="$CFLAGS -O3 -pipe -ffast-math"

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(linux/videodev.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions
dnl AC_FUNC_MMAP

AC_CHECK_LIB(aa,aa_init, have_aa=yes, [
	echo
	echo "!!!!!!! AALIB IS NOT FOUND ON THIS SYSTEM !!!!!!!"
	echo "AALib is needed in order to compile hasciicam"
	echo "no panic, that's a easy task. Just download the"
	echo "libsfrom http://ascii.dyne.org and install them."
	echo "If you did so and still get this error message,"
	echo "make sure thatlibaa.so is present in your library"
	echo "path - /etc/ld.so.conf - and that you succesfully"
	echo "runned ldconfig after installation."
	echo
	exit 0;
])

CFLAGS="$CFLAGS"
LIBS="$LIBS -laa"

dnl ==============================================================
dnl link with memory debugging library dmalloc
dnl ==============================================================
AC_CHECK_HEADER(dmalloc.h)
if test "$ac_cv_header_dmalloc_h" = "yes"; then

AC_MSG_CHECKING(if malloc debugging is wanted)
AC_ARG_WITH(dmalloc,
[  --with-dmalloc          use dmalloc, as in
                          ftp://ftp.letters.com/src/dmalloc/dmalloc.tar.gz],
[if test "$withval" = yes; then
  AC_MSG_RESULT(yes)
  AC_DEFINE(WITH_DMALLOC,1,
            [Define if using the dmalloc debugging malloc package])
  LIBS="$LIBS -ldmallocthcxx"
  DMALLOCC="dmallocc.cpp"
  have_dmalloc=yes
else
  AC_MSG_RESULT(no)
  DMALLOCC=""
  have_dmalloc=no
fi], [AC_MSG_RESULT(no)])

fi


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
